--- a/C语言_算法题（1）.md
+++ b/C语言_算法题（1）.md
@@ -20,7 +20,7 @@ int find_lostn_1(int* arr, int sz)
 // 方法二：用异或的方式
 int find_lostn_2(int* arr, int sz)
 {
-	// 加入数组10个元素，那么数组最大素就应该是10(不缺数字的话正常应该是0-9)，那么把0-10全异或在一起，
+	// 假如数组10个元素，那么数组最大元素就应该是10(不缺数字的话正常应该是0-9)，那么把0-10全异或在一起，
 	// 再跟数组每个元素都异或一遍，那么缺少的数字就会被剩下来
 	int x = 0;
 	// 先把0-10异或在一起
